update pet controller and service